bk_ida/gccida/c2/recog_26
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34180:4: error: expected ';' after expression
rtx v940; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34180:5: error: use of undeclared identifier 'v940'
rtx v940; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34243:4: error: expected ';' after expression
rtx v1003; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34243:5: error: use of undeclared identifier 'v1003'
rtx v1003; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34430:32: error: expected expression
if ( register_operand( *( rtx *)( v4 + 8), QImode) ) 
                               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34432:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = v5; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34440:33: error: expected expression
if ( !register_operand( *( rtx *)( v4 + 16), QImode) ) 
                                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34442:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = ( rtx)v8; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34442:33: error: expected ';' after expression
recog_data_0.operand[1] = ( rtx)v8; 
                                ^
                                ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34447:27: error: expected expression
if ( rtx_equal_p( *( rtx *)( v10 + 8), ( rtx)v8) ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34449:28: error: expected expression
v11 = rtx_equal_p( *( rtx *)( v10 + 16), recog_data_0.operand[0]); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34449:42: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v11 = rtx_equal_p( *( rtx *)( v10 + 16), recog_data_0.operand[0]); 
                                         ^~~~~~~~~~~~
                                         recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34462:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v190; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34466:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v191; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34480:17: error: use of undeclared identifier 'recog_data_0'
if ( *( _WORD *)recog_data_0.operand[1] == 66 && *( _WORD *)v191 == 66 ) 
                ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34487:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v196; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34491:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v197; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34510:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = v201; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/insn-recog.c:34514:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = v202; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/recog_26/src/obj/insn-recog.o] Error 1
